[package]
name = "snphost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
sev = { version = "1.2.0", default-features = false, features = [ "snp" ] }
env_logger = "0.10.0"
structopt = "0.3.26"
colorful = "0.2.2"
libc = "0.2.139"
